--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php": ">=5.6.0",
         "ext-json": "*",
         "react/child-process": ">=0.6",
-        "react/promise": "^2",
+        "react/promise": ">=2",
         "gipfl/json": ">=0.1",
         "gipfl/linux-health": ">=0.2"
     }
